--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@mipmap/ic_launcher_round"
+        android:contentDescription=""
+        tools:ignore="ContentDescription" />
 
     <ScrollView
         android:id="@+id/login_form"
@@ -44,15 +46,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <AutoCompleteTextView
+                <EditText
                     android:id="@+id/client_phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:ems="10"
                     android:hint="phone"
-                    android:inputType="phone"
-                    android:maxLines="1"
-                    android:singleLine="true" />
-
+                    android:inputType="number"
+                    tools:ignore="HardcodedText,TextFields" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -70,8 +71,8 @@
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    android:singleLine="true"
-                    android:textColorLink="@color/colorPrimaryDark" />
+                    android:textColorLink="@color/colorPrimaryDark"
+                    tools:ignore="HardcodedText" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -83,7 +84,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="忘記密碼" />
+                        android:text="忘記密碼"
+                        tools:ignore="ButtonStyle,HardcodedText" />
 
                     <Button
                         android:id="@+id/signup"
@@ -92,20 +94,23 @@
                         android:layout_marginLeft="@dimen/activity_horizontal_margin"
                         android:layout_weight="1"
                         android:elevation="24dp"
-                        android:text="註冊帳號" />
+                        android:text="註冊帳號"
+                        tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded"
+                        tools:targetApi="lollipop" />
                 </LinearLayout>
 
             </android.support.design.widget.TextInputLayout>
 
             <Button
-                android:id="@+id/email_sign_in_button"
+                android:id="@+id/phone_sign_in_button"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:layout_weight="1"
                 android:text="@string/action_sign_in"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:ignore="InefficientWeight" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -120,7 +125,8 @@
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:layout_weight="1"
-                    android:text="使用說明" />
+                    android:text="使用說明"
+                    tools:ignore="ButtonStyle,HardcodedText" />
 
                 <Button
                     android:id="@+id/help_login"
@@ -129,7 +135,8 @@
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:layout_weight="1"
-                    android:text="聯絡客服" />
+                    android:text="@string/help"
+                    tools:ignore="ButtonStyle" />
             </LinearLayout>
 
             <ImageButton
@@ -137,7 +144,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
-                app:srcCompat="@mipmap/ic_launcher" />
+                app:srcCompat="@mipmap/ic_launcher"
+                tools:ignore="ContentDescription" />
 
         </LinearLayout>
     </ScrollView>
